crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__int_compares@nulls_ge_unspecified.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Int(
        IntFilter {
            operator: Ge,
            rhs_value: None,
        },
    ),
    field: Field {
        name: "column",
        data_type: Int64,
        nullable: true,
    },
    unfiltered: PrimitiveArray<Int64>
    [
      1,
      2,
      null,
      4,
      5,
    ],
    filtered: PrimitiveArray<Int64>
    [
      1,
      2,
      null,
      4,
      5,
    ],
}
